--- a/app/src/main/res/layout/breed_item.xml
+++ b/app/src/main/res/layout/breed_item.xml
@@ -7,10 +7,11 @@
 
     <TextView
         android:id="@+id/tvBreed"
-        android:layout_width="207dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="80dp"
+        android:layout_width="251dp"
+        android:layout_height="76dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="100dp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
